--- a/src/app/components/context-menu/context-menu.component.html
+++ b/src/app/components/context-menu/context-menu.component.html
@@ -1,6 +1,6 @@
 <div
   *ngIf="isVisible"
-  class="absolute bg-white shadow-lg rounded-md border border-gray-200 py-2 z-50"
+  class="fixed bg-white shadow-lg rounded-md border border-gray-200 py-2 z-50"
   [style.top.px]="position.top"
   [style.left.px]="position.left"
 >
